# admitted

./: .coveragerc  .gitignore  .pylintrc  README.md  VERSION  pre-commit.sh  pyproject.toml  pytest.ini  release.sh  requirements-testing.txt  requirements.txt  setup.py
.github/workflows/: publish.yml
src/admitted/: _base.py  _locator.py  _manager.py  _service.py  _url.py  element.py  models.py  site.py
src/admitted/_executables/: _manager.py
src/webfetch/: __init__.py  _base.py  _locator.py  _manager.py  _outside.py  _window.py  browser.py  constants.py  element.py  exceptions.py  manager.py  models.py  page.py  site.py  website.py
tests/: conftest.py  test___init__.py  test__base.py  test__constants.py  test__locator.py  test__manager.py  test__outside.py  test__window.py  test_element.py  test_site_and_page.py
